Tue Jun 25 12:23:30 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix oldgen/remembered_shady counting algorithm.

	* gc.c (rgengc_check_shady): increment
	  `objspace->rgengc.remembered_shady_object_count' here.

	* gc.c (rgengc_remember): return FALSE if obj is already remembered.

	* gc.c (rgengc_rememberset_mark): make it void.

	* gc.c (gc_mark_children): fix to double counting oldgen_object_count
	  at minor GC.

Tue Jun 25 12:07:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (MSB): Removed.
	  (BDIGIT_MSB): Defined using BIGRAD_HALF.
	  (bary_2comp): Apply BIGLO after possible over flow of BDIGIT.
	  (get2comp): Ditto.
	  (bary_unpack_internal): Use BDIGIT_MSB.
	  Apply BIGLO after possible over flow of BDIGIT.
	  (rb_integer_unpack): Use BDIGIT_MSB.
	  (calc_hbase): Use BDIGMAX.
	  (big2dbl): Use BDIGMAX.
	  Apply BIGLO after possible over flow of BDIGIT.
	  (rb_big_neg): Apply BIGLO after possible over flow of BDIGIT.
	  (biglsh_bang): Ditto.
	  (bigrsh_bang): Ditto.
	  (bary_divmod): Use BDIGIT_MSB.
	  (bigdivrem): Ditto.
	  (bigxor_int): Apply BIGLO after possible over flow of BDIGIT.

	* marshal.c (shortlen): Use SIZEOF_BDIGITS instead of sizeof(BDIGIT).

	* ext/openssl/ossl_bn.c (ossl_bn_initialize): Use SIZEOF_BDIGITS
	  instead of sizeof(BDIGIT).

Tue Jun 25 11:40:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (big2ulong): suppress shorten-64-to-32 warning.  BDIGIT can
	  be bigger than long now.

	* bignum.c (LSHIFTX): remove redundant never-true expression.

Tue Jun 25 00:55:54 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (typedef struct rb_objspace): Change members for monitor objects.
	* gc.c (gc_marks_test): Check all WriteBarrier Errors and track them in obj-tree.
	* gc.c (rgengc_check_shady): Ditto.
	* gc.c (gc_marks): Move 2 function calls to gc_marks_test for test initialize.

Mon Jun 24 23:30:31 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_unpack_single_bdigit): Refine code to filling